fix see more buttons on small screens

--- a/resources/style.css
+++ b/resources/style.css
@@ -173,6 +173,10 @@ body {
     .resume-card img {
         width: 60vw !important;
     }
+
+    .see-more-wrapper.left {
+        align-items: end !important;
+    }
 }
 
 #main-nav {
